# workers-rs-template

./: .gitignore  Cargo.toml
.wrangler/tmp/bundle-x7EIl0/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-3ukBef/: f5fee1a7df8aac9d67c1a48320cf402a54236316-index.wasm  shim.js  shim.js.map
