[package]
name = "working-flares"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.188"
worker = { version = "0.0.18" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
